--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         // STEP 1: PASTE YOUR FIREBASE CONFIG KEYS BELOW
         // ==========================================================
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+  apiKey: "AIzaSyDRkvHja-U8s3fCT7Vxu4FXz6ofjqMDFgk",
+  authDomain: "pallet-tracker-app.firebaseapp.com",
+  projectId: "pallet-tracker-app",
+  storageBucket: "pallet-tracker-app.firebasestorage.app",
+  messagingSenderId: "321194679490",
+  appId: "1:321194679490:web:311f3e35808719d3a02f5b",
+  measurementId: "G-EBENYCML8R"
+};
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
